# ntools

./: Cargo.toml  readme.md
.github/workflows/: documentation.yml  tests.yml
crates/fispact/: Cargo.toml  readme.md
crates/fispact/src/: error.rs  interval.rs  inventory.rs  lib.rs  nuclide.rs
crates/format/: Cargo.toml
crates/format/src/: lib.rs
crates/iaea/: Cargo.toml  readme.md
crates/iaea/src/: common.rs  error.rs  fetch.rs  lib.rs  load.rs  parsers.rs  record.rs  special.rs
crates/mctal/: Cargo.toml  readme.md
crates/mctal/src/: error.rs  lib.rs  mctal.rs
crates/mctal/src/core/: header.rs  kcode.rs  mod.rs  particle.rs  tally.rs  tmesh.rs
crates/mctal/src/parsers/: header.rs  kcode.rs  mod.rs  number.rs  tally.rs  tmesh.rs
crates/mctal/src/reader/: header.rs  kcode.rs  mod.rs  tally.rs  tmesh.rs
crates/mesh/: Cargo.toml  readme.md
crates/mesh/data/: points.txt
crates/mesh/data/meshes/: fmesh_104.msht  fmesh_114.msht  fmesh_124.msht  fmesh_134.msht  fmesh_204.msht  fmesh_214.msht  fmesh_224.msht  fmesh_234.msht  fmesh_304.msht  fmesh_314.msht  fmesh_324.msht  fmesh_334.msht  fmesh_404.msht  fmesh_414.msht  fmesh_424.msht  fmesh_434.msht  fmesh_504.msht  fmesh_514.msht  fmesh_524.msht  fmesh_534.msht  fmesh_604.msht  fmesh_614.msht  fmesh_624.msht  fmesh_634.msht  fmesh_704.msht  fmesh_714.msht  fmesh_724.msht  fmesh_734.msht
crates/mesh/src/: error.rs  format.rs  geometry.rs  group.rs  lib.rs  mesh.rs  particle.rs  point.rs  voxel.rs
crates/mesh/src/point/: mod.rs  point.rs
crates/mesh/src/reader/: meshtal.rs  mod.rs  parsers.rs
crates/mesh/src/vtk/: builder.rs  convert.rs  mod.rs
crates/mesh/tests/: core_formats.rs
crates/posvol/: Cargo.toml  readme.md
crates/posvol/src/: error.rs  lib.rs  posvol.rs  reader.rs  writer.rs
crates/support/: Cargo.toml
crates/support/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: error.rs  lib.rs  option_ext.rs  slice_ext.rs  sort_ext.rs  string_ext.rs  value_ext.rs
crates/weights/: Cargo.toml  readme.md
crates/weights/src/: error.rs  lib.rs  operations.rs  weight_window.rs
crates/weights/src/vtk/: builder.rs  convert.rs  mod.rs
crates/wwgen/: Cargo.toml  readme.md
crates/wwgen/src/: bude.rs  error.rs  lib.rs  magic.rs
src/: lib.rs
