[package]
authors.workspace      = true
description            = "Common utility finctions shared by most ntools crates"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["formatting", "neutronics", "ntools", "utilities"]
license.workspace      = true
name                   = "ntools-format"
readme                 = "readme.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
doctest = true

[lints]
workspace = true
