[package]
authors.workspace      = true
description            = "Module for interacting with IAEA decay data"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["decay-data", "iaea", "neutronics", "ntools"]
license.workspace      = true
name                   = "ntools-iaea"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
bincode      = { workspace = true }
csv          = { workspace = true }
indicatif    = { workspace = true }
log          = { workspace = true }
minreq       = { workspace = true }
nom          = { workspace = true }
ntools-utils = { workspace = true }
rayon        = { workspace = true }
serde        = { features = ["derive"], workspace = true }
serde_json   = { workspace = true }
stderrlog    = { workspace = true }
textwrap     = { workspace = true }
thiserror    = { workspace = true }

[lib]
doctest = true

[lints]
workspace = true
