[package]
authors.workspace      = true
description            = "Module for mesh tally operations and file parsing"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["mcnp", "mesh", "meshtal", "neutronics", "ntools"]
license.workspace      = true
name                   = "ntools-mesh"
readme                 = "readme.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
kdam           = { features = ["template"], workspace = true }
log            = { workspace = true }
nalgebra       = { workspace = true }
nom            = { workspace = true }
ntools-support = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
vtkio          = { workspace = true }

[dev-dependencies]
rstest = "0.21"

[lib]
doctest = true

[lints]
workspace = true
