[package]
authors.workspace      = true
description            = "Module for mesh tally operations and file parsing"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["mcnp", "mesh", "meshtal", "neutronics", "ntools"]
license.workspace      = true
name                   = "ntools-mesh"
readme                 = "readme.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
derive_more  = { version = "1.0.0", features = ["from"] }
kdam         = { features = ["template"], workspace = true }
log          = { workspace = true }
nalgebra     = { workspace = true }
nom          = { workspace = true }
ntools-utils = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
vtkio        = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }

[lib]
doctest = true

[lints]
workspace = true
